app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: prod 
  labels:
    app: my-app
    auther: Tawfeeq
spec:
  type: ClusterIP
  selector:
    app: my-app
  ports:
    - targetPort: app-port
      port: 80
      protocol: TCP
