service.yml
apiVersion: v1
kind: Service
metadata:
  name: company-task-service
spec:
  selector:
    app: company-task
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  type: LoadBalancer
